--- a/boards/arm/adafruit_qt_py_rp2040/adafruit_qt_py_rp2040.dts
+++ b/boards/arm/adafruit_qt_py_rp2040/adafruit_qt_py_rp2040.dts
@@ -26,10 +26,21 @@
 	aliases {
 		watchdog0 = &wdt0;
 		led-strip = &ws2812;
+		zephyr,console = &uart0;
+		zephyr,code-partition = &code_partition;
+	};
+
+	xtal_clk: xtal-clk {
+		compatible = "fixed-clock";
+		clock-frequency = <12000000>;
+		#clock-cells = <0>;
 	};
 };
 
 &flash0 {
+	/* 8MB of flash minus the 0x100 used for
+	 * the second stage bootloader
+	 */
 	reg = <0x10000000 DT_SIZE_M(8)>;
 
 	partitions {
@@ -41,6 +52,13 @@
 		second_stage_bootloader: partition@0 {
 			label = "second_stage_bootloader";
 			reg = <0x00000000 0x100>;
+		/*
+		 * Start at the beginning of usable flash, 8MB minus the
+		 * second stage space and the 16 KiB reserved for settings
+		 */
+		code_partition: partition@100 {
+			label = "code";
+			reg = <0x100 (DT_SIZE_M(8) - DT_SIZE_K(16))>;
 			read-only;
 		};
 
@@ -52,6 +70,12 @@
 			label = "code-partition";
 			reg = <0x100 (DT_SIZE_M(8) - 0x100)>;
 			read-only;
+		 * The final 16 KiB is reserved for the application.
+		 * Storage partition may be used by FCB or LittleFS.
+		 */
+		storage_partition: partition@7fbe00 {
+			label = "storage";
+			reg = <0x007fbe00 DT_SIZE_K(16)>;
 		};
 	};
 };
