--- a/boards/arm/adafruit_qt_py_rp2040/adafruit_qt_py_rp2040_defconfig
+++ b/boards/arm/adafruit_qt_py_rp2040/adafruit_qt_py_rp2040_defconfig
@@ -4,7 +4,7 @@ CONFIG_SOC_SERIES_RP2XXX=y
 CONFIG_SOC_RP2040=y
 CONFIG_BOARD_ADAFRUIT_QT_PY_RP2040=y
 
-CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=125000000
+CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=240000000
 
 # enable uart driver
 CONFIG_SERIAL=y
@@ -20,8 +20,12 @@ CONFIG_RESET=y
 # Enable clock control by default
 CONFIG_CLOCK_CONTROL=y
 
+
 # Code partition needed to target the correct flash range
 CONFIG_USE_DT_CODE_PARTITION=y
 
 # Output UF2 by default, native bootloader supports it.
 CONFIG_BUILD_OUTPUT_UF2=y
+
+# Enable GPIO
+CONFIG_GPIO=y
