--- a/boards/arm/seeeduino_xiao_rp2040/seeeduino_xiao_rp2040.dts
+++ b/boards/arm/seeeduino_xiao_rp2040/seeeduino_xiao_rp2040.dts
@@ -18,6 +18,7 @@
 	chosen {
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
+		zephyr,flash-controller = &ssi;
 		zephyr,console = &uart0;
 		zephyr,code-partition = &code_partition;
 	};
